bugfix(LDP-12418): fix spacing issues between title and fields

--- a/components/FormComponents/FormComponents.module.css
+++ b/components/FormComponents/FormComponents.module.css
@@ -57,3 +57,6 @@
 .labelHeading {
     color: black;
 }
+.padded {
+    margin: 4px 0px;
+}
